--- a/src/components/utils/navbars/navigationBar.css
+++ b/src/components/utils/navbars/navigationBar.css
@@ -1,6 +1,6 @@
-.btn-primary{
-    padding: 10px 10px;
-    margin: 10px;
-    font-size: 20px;
-    border-radius: 30px;
-  }
+
+
+  .navbar-nav {
+  
+    text-align: center;
+}
