--- a/src/components/login.module.css
+++ b/src/components/login.module.css
@@ -17,7 +17,7 @@
 
 
     width: 300px;
-    height: 300px;
+    height: 340px;
     padding: 10px;
     margin: 10px;
     border-radius: 14px;
@@ -55,9 +55,21 @@
     font-weight: bold;
     font-size: medium;
     border-radius: 10px;
+    margin: 5px;
     /* backg“round-color: #444444; */
   }
   
   .input{
     border-radius: 10px;
+
+  }
+
+  .checkBox {
+   
+    padding: 10px;
+    border: 1px;
+}
+
+  .myModal .modal-content {
+    background-color: red;
   }
