--- a/src/components/utils/navbars/navigationBar.css
+++ b/src/components/utils/navbars/navigationBar.css
@@ -1,5 +1,12 @@
 
   .navbar-nav {
-  
+   
+    font-weight: bold;
+    font-size: medium;
+    text-align: center;
+}
+.navbar-brand{
+  font-weight: bold;
+    font-size: xx-large;
     text-align: center;
 }
